[gd_scene load_steps=3 format=3 uid="uid://dwxx2paxeu0jj"]

[ext_resource type="Script" uid="uid://e6ayrfcexwhy" path="res://Scripts/card_functional.gd" id="1_gwgv3"]
[ext_resource type="PackedScene" uid="uid://b2xc0cfu7eey8" path="res://Scenes/card.tscn" id="2_7iwxr"]

[node name="CardFunctional" type="Node2D"]
script = ExtResource("1_gwgv3")

[node name="Card" parent="." instance=ExtResource("2_7iwxr")]

[connection signal="mouse_entered" from="Card" to="." method="_on_card_mouse_entered"]
[connection signal="mouse_exited" from="Card" to="." method="_on_card_mouse_exited"]
